--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.HiltGradleImplementation" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CounterAppDependency" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.HiltGradleImplementation" parent="Base.Theme.HiltGradleImplementation" />
+    <style name="Theme.CounterAppDependency" parent="Base.Theme.CounterAppDependency" />
 </resources>
